--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8792,6 +8792,12 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
 
 FRA_appoint_a_new_governement:0 "Form a New Cabinet"
 
+FRA_educational_reform:0 "Educational Reform"
+FRA_educational_reform_desc:0 "Deputy §YLéon Blum's§! proposal aims to reform the education system, particularly teacher training. From now on, teachers will have to add a republican and social wing to their program, aimed at describing the new governmental system and its values.\n\nIn addition, the courses will no longer be able to mention eugenics or any hierarchy of races."
+
+FRA_arrest_racist_politicians:0 "Order Racist Politicians Arrestation"
+FRA_arrest_racist_politicians_desc:0 "Several far-right politicians, whether nationalists or monarchists, are clearly racist and do not hesitate to demean individuals based on their origins or religions. The arrest of such a figure will calm the climate in France and stop the publication of anti-Semitic newspapers."
+
  BUL_BW2_outcome_timer:0 "Bulgarian Intervention Outcome"
  BUL_BW2_outcome_timer_desc:0 "War cant last forever, if we dont beat the Balkan League fast enough, we will have to make a compromise over macedonian claims."
  kis_secondbalkanwar_victory:0 "§Y[BUL.getFlag][BUL.getName]§! won the Second Balkan War"
@@ -9080,8 +9086,8 @@ july_crisis_alert_tt:0 "§RThe July crisis§! begins, opposing §Y[AUH.getFlag][
 
 FRA_vote_will_fail:0 "§RThe vote will likely fail.§!"
 FRA_vote_will_pass:0 "§GThe vote shall pass !§!"
-FRA_effect_if_law_pass:0 "\n§YEffect if the vote pass :§!"
-FRA_effect_if_law_fail:0 "\n§REffect if the vote fail :§!"
+FRA_effect_if_law_pass:0 "\n§YEffect if the vote passes:§!"
+FRA_effect_if_law_fail:0 "\n§REffect if the vote fail:§!"
 FRA_effect_if_mission_completed:0 "\n§GEffect if mission is completed :§!"
 FRA_effect_if_mission_failed:0 "\n§REffect if mission is failed :§!"
 
