--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -966,7 +966,7 @@
  ww1_france.81.d:0 "The parliament currently votes on a bill to regulate the production of weapons. The bill would impose a restructuring of industrial arms chains. Passage of this regulation would seriously slow down our production over half a year."
  ww1_france.81.a:0 "The law passes"
  ww1_france.81.b:0 "Impose a lightening of the law"
- ww1_france.81.c:0 "Full oppose the law!"
+ ww1_france.81.c:0 "Fully oppose the law!"
  ww1_france.82.t:0 "Crime on the Rise in the Parisian Suburbs"
  ww1_france.82.d:0 "More and more various facts list the actions of groups of thugs in the Parisian suburbs. The criminals are allegedly members of the "Bonnot Gang", a dangerous underworld committing thefts, assassinations and various break-ins. The inhabitants of the capital live in fear and the parliament is debating the possibility of allocating a budget to fight against these bandits."
  ww1_france.82.a:0 "Parliamentarians cannot agree"
@@ -14862,3 +14862,7 @@ FRA_law_soon:0 "§GA law will be proposed soon by the §YParliament§! to addres
 test_show_shall_coco:0 "[?seatsDistri^0] seats for communists"
 test_show_shall_coco_SCP:0 "[?SCP|Y] seats for Silent's party"
 test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
+
+ ww1_france.494.t:0 "Racisism and Antisemitism from the Right"
+ ww1_france.494.d:0 "Following the appointment of Léon Blum as prime minister and the composition of a mixed left-wing government, many conservative newspapers issued discriminatory criticisms against the cabinet. In \"Gringoire\" or in \"L'Action Française\", politicians describe Blum as \"a German Jew\", \"a man to be killed\" or even \"human trash\". Several other ministers are targeted, notably women and black parliamentarians.\n\nFrance is plagued by ordinary racism and obvious hatred of Jews. These backward thoughts harm the image of Comrade Blum and the unity of the nation. We must absolutely put an end to these waves of hatred by banning anti-Semitic newspapers, political actions against black people and all forms of state discrimination."
+ ww1_france.494.a:0 "This is one of our priorities"
