--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3027,6 +3027,9 @@
  FRA_normalization_of_the_party:0 "Normalization of The Party"
  FRA_normalization_of_the_party_desc:0 "The SFIO is a still unstable party, with very different ideologies and currents. This troubled political line must be reaffirmed and reformist unionism must be the only direction of the party."
 
+ FRA_ban_antisemitism:0 "Blum [Date.getYear] Reforms"
+ FRA_ban_antisemitism_desc:0 "France is plagued by ordinary racism and obvious hatred of Jews. These backward thoughts harm Comrade Blum's image and the unity of the nation. We must absolutely put an end to these waves of hatred by banning anti-Semitic newspapers, political actions against black people and all forms of state discrimination."
+
  FRA_enforce_state_atheism:0 "Enforce State Atheism"
  FRA_enforce_state_atheism_desc:0 "The law of separation of religion and state of 1905 is only a first step towards the construction of an atheistic state. Cults have no place in France, they obscure the vision of the people and distract them from the struggle of the proletariat. Church property must be seized and used to finance large public projects. Some buildings may also be used for purposes other than worship."
 
@@ -7024,6 +7027,7 @@ FRA_ww1_cartel_des_droites_desc:0 "The union of the French right is a reality wh
  FRA_350_seats_with_flag:0 "[FRA.GetFlag]§YFrance:§! Control 350 seats"
  line:0 "--------------------------------------------------"
  nothing_happend:0 "§RNothing will happen§!"
+ nothing_happend_good:0 "§gNothing will happen§!"
 
  in_europe:0 "Produces this effect in §YEurope§! :"
  FRA_national_assembly_dissolved:0 "§YThe national assembly will be dissolved. Allowing us to rule with §Rno opposition.§!§!"
