--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1357,6 +1357,8 @@ FRA_idea_socialist_income_tax_desc:0 "The creation of an income tax in “slices
  
  #FRANCE
  FRA_idea_french_autarky:0 "Autarky" 
+ FRA_far_right_opposition:0 "Far Right Opposition"
+ FRA_far_right_opposition_desc:0 "France is plagued by ordinary racism and obvious hatred of Jews. These backward thoughts the unity of the nation."
 
  FRA_CGPF:0 "GCPF"
  FRA_CGPF_desc:0 "The "Confédération générale de la production française" is an employers' organization designed to bring together the various employers' corporations."
