--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1358,6 +1358,8 @@ workers_comp_pass.tt:0 "Modify §YNew Nationalism§! by:\nFactory Output: §G+5.
 workers_comp_pass_focus.tt:0 "When this focus is selected: \nActivate mission: §YWorkers Compensation Law§! \nif the legislation passes:\nModify §YNew Nationalism§! by:\nFactory Output: §G+5.00%§!\nProduction Efficiency Growth: §G+5.00%§!"
 strong_union.tt:0 "Modify §YNew Nationalism§! by:\nPolitical Power Gain: §G+5%§!\nFactory Output: §R-5.00%§!"
  USA_support_development_of_cities:0 "Support Development of Cities"
+USA_rapid_demobilize:0 "Rapid Demobilization"
+USA_rapid_demobilize_idea:0 "Rapid Demobilization"
 USA_prohibation:0 "Prohibation"
 USA_expand_oil_drilling:0 "Expand Oil Drilling"
 USA_re_privatize_rail:0 "Re Privatize the Railways"
