Tweak Austrian protectorate of Serbia

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -11217,6 +11217,10 @@ FRA_leave_MOR: "Leave Morocco"
  ww1_serbia.145.d: "The battle is over, the Austrian Empire has finally surrendered and its imperialism will never again threaten the Balkans!"
  ww1_serbia.145.a: "Lets reorganise the balkans"
  ww1_serbia.145.b: "The map is fine as it is!"
+ ww1_serbia.146.t: "Status of Montenegrins in the Empire and with Serbia"
+ ww1_serbia.146.d: "The Montenegrins are a branch of the South Slavs, close to the Serbs, who have recently come under our 'protection'. While we have been successful in expanding our influence in the Balkans, it has been argued that rather than administering Montenegrins and Serbs separately, it makes more sense to assign parts of the Montenegrin population to the Serbian protectorate in order to stifle and divide their aspirations for South Slav national unity. Indeed, tensions are rising in the ethnic Montenegrin provinces and the potential for insurgency and disobedience is high."
+ ww1_serbia.146.a: "Allow them to enjoy a bit."
+ ww1_serbia.146.b: "The map is fine as it is!"
  
  # SOVIET RUSSIA 
  ww1_soviet.2.t: "Uprising in the Caucasus"
