--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -92,7 +92,7 @@
  LOADING_TIP_90: "Talk to me of treaties! Talk to me of the League of Nations! Every Great Power in Europe was pledged by treaty to preserve Belgium. That was a League of Nations, but it failed.\n- Edward Carson"
  LOADING_TIP_91: "We didn't start the fire, but when we are gone it will still burn on, and on, and on.\n- Billy Joel"
  LOADING_TIP_92: "God has endowed the British race with a worldwide empire, that they may execute His sovereign purpose in the world. The victories you will have over the heathen are the victories of the nobler soul in man.\n- Unknown Chaplain"
- LOADING_TIP_93: "Our regiment has been sacrificed for the honor of Belgrade and the Fatherland. Therefore, you no longer need to worry about your lives: they no longer exist. So, forward to glory! For the King and the Fatherland! Long live the King, Long live Belgrade!\n- Dragutin Gavrilović"
+ LOADING_TIP_93: "Our regiment has been sacrificed for the honor of Belgrade and the Fatherland. Therefore, you no longer need to worry about your lives: they no longer exist. So, forward to glory! For the King and the Fatherland!\n- Dragutin Gavrilović"
  LOADING_TIP_94: "Frankly, I enjoyed the war.\n- Adrian Carton de Wiart"
  LOADING_TIP_95: "Neutrality is not politics.\n- Elefthérios Venizélos"
  LOADING_TIP_96: "Don't worry people. It won't be good. \n- Nikola Pašić"
