--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -11221,6 +11221,15 @@ FRA_leave_MOR: "Leave Morocco"
  ww1_serbia.146.d: "The Montenegrins are a branch of the South Slavs, close to the Serbs, who have recently come under our 'protection'. While we have been successful in expanding our influence in the Balkans, it has been argued that rather than administering Montenegrins and Serbs separately, it makes more sense to assign parts of the Montenegrin population to the Serbian protectorate in order to stifle and divide their aspirations for South Slav national unity. Indeed, tensions are rising in the ethnic Montenegrin provinces and the potential for insurgency and disobedience is high."
  ww1_serbia.146.a: "Allow them to enjoy a bit."
  ww1_serbia.146.b: "The map is fine as it is!"
+ ww1_serbia.147.t: "Republican Revolution"
+ ww1_serbia.147.d: "There are growing calls for the overthrow of the puppet monarchy that has been restored under Austrian protection. Though never openly vocal before, their presence is now a matter of public record, and there appear to be a number of infiltrators within the military and bureaucracy. If ignored, it will not be long before a massive Republican uprising breaks out."
+ ww1_serbia.147.a: "Long live Serbia!"
+ ww1_serbia.147.b: "The monarchy shall endure..."
+ ww1_serbia.148.t: "Monarchy Abolished in Serbia"
+ ww1_serbia.148.d: "The monarchy has fallen in Serbia. Serbia began as a principality after independence from the Ottomans, was ruled by the Obrenovic and Karadzorjevic families, and eventually became a republic. It is unclear what her fate will be and what its place in the Balkans and Europe will be."
+ ww1_serbia.148.a: "Long live the Republic!"
+ ww1_serbia.148.b: "Republicanism in fashion?"
+ ww1_serbia.148.c: "The powderkeg should not have another spark...."
  
  # SOVIET RUSSIA 
  ww1_soviet.2.t: "Uprising in the Caucasus"
