--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -57,7 +57,7 @@ ww1_germanrework.19.t:0 "Factions in the Right"
 
 #1910 Strikes
 ww1_germanrework.3.t:0 "Strikes in Hamburg"
- ww1_germanrework.3.d:0 ""
+ ww1_germanrework.3.d:0 "Earlier this morning a strike was called in the shipbuilding yards at Hamburg, our principal commercial seaport, current reports estimate that around ten thousand employees have ceased their work. The strike was supported by (and catalysed) by the Deutscher Transportarbeiter-Verband who have been a consistent thorn in the Kaiser's side since their formation earlier this year; highlighting to many within and outside the empire that the rise of socialism in Germany is a real threat to the Kaiser's power.\n\nThe ringleaders of the strike have threatened to continue the strike until their demands of higher wages and shorter hours have been met. Although the demands have been to little avail as the employers are persistent in denying the strikers out of fear of enabling further industrial action. Only time will tell whether the strikers' demands will be met but either way, Germany is sure to suffer more strikes as a consequence soon."
  ww1_germanrework.3.a:0 "We must negotiate with the stikers"
 ww1_germanrework.4.t:0 "Clashes with Strikers in Berlin"
  ww1_germanrework.4.d:0 ""
