early front populaire GUI

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8798,6 +8798,8 @@ FRA_educational_reform_desc:0 "Deputy §YLéon Blum's§! proposal aims to reform
 FRA_arrest_racist_politicians:0 "Order Racist Politicians Arrestation"
 FRA_arrest_racist_politicians_desc:0 "Several far-right politicians, whether nationalists or monarchists, are clearly racist and do not hesitate to demean individuals based on their origins or religions. The arrest of such a figure will calm the climate in France and stop the publication of anti-Semitic newspapers."
 
+FRA_front_populaire_desc:0 "The Popular Front united the left-liberal, radical socialist and revolutionary syndicalist parties into a single entity. This coalition owes its stability only to balanced reforms, which are increasingly difficult to carry out."
+
  BUL_BW2_outcome_timer:0 "Bulgarian Intervention Outcome"
  BUL_BW2_outcome_timer_desc:0 "War cant last forever, if we dont beat the Balkan League fast enough, we will have to make a compromise over macedonian claims."
  kis_secondbalkanwar_victory:0 "§Y[BUL.getFlag][BUL.getName]§! won the Second Balkan War"
@@ -9120,3 +9122,39 @@ FRA_is_refunding_60_tanks_plus_extra_desc:0 "We have not fulfilled the terms of 
 FRA_is_redundings_tanks:0 "Is Refunding a Tank Contract"
 
 FRA_is_being_refunded_plus_extra:0 "Is Being Refunded by France"
+
+FRA_front_populaire_party_name:0 "[getPopularFrontPartyName]"
+
+hardline_SFIO:0 "§rHardline SFIO§!"
+moderate_SFIO:0 "§OModerate SFIO§!"
+liberal_socialists:0 "§8Liberal Socialists§!"
+radical_party:0 "§CRadical Socialists§!"
+
+FRA_loyalty_percent:0 "[getPopularFrontLoyaltyPercent]"
+
+hardline_SFIO_loyalty:0 "[?hardline_SFIO_loyalty|0%%]"
+moderate_SFIO_loyalty:0 "[?moderate_SFIO_loyalty|0%%]"
+liberal_socialists_loyalty:0 "[?liberal_socialists_loyalty|0%%]"
+radical_party_loyalty:0 "[?radical_party_loyalty|0%%]"
+
+FRA_front_populaire_explanation:0 "You must preserve the stability of the coalition. If one of its components has less than §Y20%§! stability£stability_icon£, §Rthe coalition will collapse!§!"
+FRA_front_populaire_mechanics:0 "Activate the §CFront Populaire§! decision category. Use it to check the coalition stability and the loyalty of each of its component."
+
+FRA_three_hardline_sfio_law_to_pass:0 "[?SFIO_law_passed|+0]/§Y3§! §tHardline SFIO§! Laws Passed"
+
+vote_three_hardline_sfio_laws:0 "Concessions to SFIO"
+vote_three_hardline_sfio_laws_desc:0 "The left wing of the SFIO, made up of anarchists, communists and trade unionists, jointly demand the accentuation of reforms aimed at giving more powers to workers."
+party_coalition_lose_loyalty:0 "[getPopularFrontPartyName] will lose up to §R[?loyalty_lose|%%0] loyalty§!"
+party_coalition_gain_loyalty:0 "[getPopularFrontPartyName] will gain up to §G[?loyalty_gain|%%0] loyalty§!"
+FRA_collective_labor_agreement:0 "Collective Labor Agreement"
+FRA_collective_labor_agreement_desc:0 "The law on collective agreements proposed by MP §YLouis Bubreuilh§! proposes the establishment of agreements for each sector of the industry.\n\nThe agreements allow the establishment of specific statuses on remuneration, working conditions or qualifications. The main professional branches concerned are the UIMM metalworkers, farmers, miners, handlers and independent producers."
+FRA_communist_want_more_reforms:0 "§tHardline SFIO§! want reforms"
+
+FRA_protection_of_the_strike_right:0 "Protection of the Strike Right"
+FRA_protection_of_the_strike_right_desc:0 "The law proposed by deputy §YLéon Jouhaux§! protects the right to strike by protecting strikers. Among the new rights granted by the parliamentary project, we find the impossibility for a boss to sue his employees if they occupy a building, or the reduction of strike notice for trade union organizations."
+
+FRA_worker_safety_law:0 "Worker Safety Law"
+FRA_worker_safety_law_desc:0 "The law proposed by Deputy §YAristide Briand§! allows the recognition of several new occupational diseases as well as the treatment of injuries linked to the exercise of the function, particularly in the field of manual work.\n\nIn addition, visits to a health professional will be mandatory once a year in order to establish a health check and detect possible illnesses or injuries that could lead to stopping work."
+
+FRA_salary_limitation_act:0 "Salary Limitation Act"
+FRA_salary_limitation_act_desc:0 "The law proposed by §YMaurice Thorez§! define a calculation formula limiting the maximum salary within a company based on its profits, the number of employees and the lowest salary. To resume it in its simplest form, it limits the maximum salary to 25 times the lowest salary in the company."
