--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14879,3 +14879,16 @@ test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
  ww1_france.494.t:0 "Racisism and Antisemitism from the Right"
  ww1_france.494.d:0 "Following the appointment of Léon Blum as prime minister and the composition of a mixed left-wing government, many conservative newspapers issued discriminatory criticisms against the cabinet. In \"Gringoire\" or in \"L'Action Française\", politicians describe Blum as \"a German Jew\", \"a man to be killed\" or even \"human trash\". Several other ministers are targeted, notably women and black parliamentarians.\n\nFrance is plagued by ordinary racism and obvious hatred of Jews. These backward thoughts harm the image of Comrade Blum and the unity of the nation. We must absolutely put an end to these waves of hatred by banning anti-Semitic newspapers, political actions against black people and all forms of state discrimination."
  ww1_france.494.a:0 "This is one of our priorities"
+
+ ww1_france.495.t:0 "Lynching of Minister Blum"
+ ww1_france.495.d:0 "On [?global.date.GetDateString] while Blum was traveling accompanied by MP Pierre Semard, a small French Action group violently attacked him. 7 men come to him, shouting that they want to "put an end to Jewish politics", beginning a terrible physical attack. Blum and Semard were put on the ground then beaten until they lost consciousness. They were then transported to Hôtel-Dieu. Leon Blum was treated for a ruptured temporal vein."
+ ww1_france.495.a:0 "They must pay!"
+
+ ww1_france.496.t:0 "Communists in the Governement ?"
+ ww1_france.496.d:0 "The normalization of the union of the left around the principles of democracy and moderation permitted by the popular front caused a relative "rightization" of the struggle. Some moderate elements of the coalition are not satisfied, notably the most revolutionary figures of the SFIO. A united official request from part of the left-wing deputies of the movement, including Pierre Monatte or Alfred Rosmer, calls for a partial recomposition of the government including revolutionary communists or trade unionists, such as the Jaurès government. We are only talking about a symbolic composition here, but it would demonstrate our attachment to the coalition and its left wing."
+ ww1_france.496.a:0 "We can include some of them"
+ ww1_france.496.b:0 "A large broad of democrats is preferable"
+
+ ww1_france.497.t:0 "Strikes !"
+ ww1_france.497.d:0 "A huge rally bringing together around 100,000 people took place this morning in Paris, organized by the main unions rallying around the CGT. A large part of the demonstration, made up of radical socialists, aimed to demand new social advances "as quickly as possible" for the workers of France. Overall, the pressure on the Blum No. 2 government is gradually increasing and the threat of the explosion of the coalition is felt.\n\nIf we do not order new reforms quickly, we risk losing the support of some of our left-wing deputies."
+ ww1_france.497.a:0 "We must reform the country"
