--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8362,7 +8362,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SAU_arabian_conquest:0 "Arabian Conquest of Saudis"
  SAU_arabian_conquest_desc:0 "Saudis once had nearly the entire Arabian Peninsula under the control. But it fell to the sands and the flows of time. At the dawn of the century, Saudis returned to Riyadh, and now it's time to take up the glorious battles to restore it to its former glory."
  SAU_arabian_conquest_states:0 "Saudis Claims In Arabia"
- SAU_conquer_al_hasa:0 "Conquer al-Hasa"
+ SAU_conquer_al_hasa:0 "Conquer al-Ihsa'a"
  SAU_battle_of_jarrab:0 "Invade Nejd"
  SAU_battle_of_jarrab_desc:0 "We have observed with growing concern that the British have established contact with Nejd, an action that could significantly alter the balance of power in the region. This development is troubling, as it suggests a potential alliance against our interests. To safeguard our position and maintain our influence, we believe an invasion might be necessary."
  SAU_unite_JBS:0 "Conquer [FROM.GetName]"
