--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -160,7 +160,7 @@
  GER_german_offensive_mission:0 "Offensive on Russia"
  GER_german_offensive_mission_desc:0 "The Bolsheviks seem to be in quite the pickle with their civil war, however, we do not care the slightest. If the Bolsheviks are not willing to sign a peace, if the wartorn Russians still refuse to make peace, we will march onto the gates of Moscow, and subjugate all of Russian Europe under our boot."
  GER_german_offensive_mission_tt:0 "Germany will attack the Bolsheviks"
- GER_capitulation:0" Germany surrenders "
+ GER_capitulation:0 "§Y[GER.GetFlag]Germany§! has sued for peace"
  GER_decision_central_powers_conference:0 "Central Powers Conference"
  GER_misison_central_powers_conference:0 "Conference in progress"
  GER_italian_request:0 "Invite [ITA.GetName]"
@@ -379,7 +379,7 @@
  FRA_jaures_speech:0 "Jean Jaurès' Speech"
  FRA_jaures_speech_citation:0 "“L’histoire enseigne aux hommes la difficulté des grandes tâches et la lenteur des accomplissements, mais elle justifie l’invincible espoir.”"
  FRA_SFIO_gain_50_seat:0 "§RSFIO§! will gain §Y50§! additional seats." 
- FRA_capitulation:0 " France surrenders "
+ FRA_capitulation:0 "§Y[FRA.GetFlag]France§! has sued for peace"
  FRA_great_war:0 "The Great War"
  FRA_great_war_desc:0 "War. War never changes. Germany is preparing for an offensive war, and we need to strengthen the Entente before the Germans cross the border. It depends on us when the world finds itself in the flames of World War. "
  FRA_armistice:0 "Offer Surrender Terms to Germany"
@@ -1069,6 +1069,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  member_of_entente_armistice:0 "Refuse to Surrender"
  member_of_entente:0 "Enemy of Central Powers\n"
  member_of_centre_armistice:0 "Refuse to Surrender"
+ refuse_to_surrender_tt:0 "You will §Yremain at war without peace§!.\n\\n§RARCADE FEATURE. This can lead to undesirable results. (e.g. broken borders, political events).§!"
  compiegne_armistice:0 "Armistice of Compiègne\n"
  compiegne_armistice_mission:0 "Armistice of Compiègne"
  compiegne_armistice_message:0 "§YFrance§! and §YEntente§! are victorious. §YGermany§! and §Yher allies§! will have to pay the prices demanded by the victors in the post-war treaty."
