--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -11197,13 +11197,14 @@ FRA_leave_MOR: "Leave Morocco"
  ww1_serbia.127.a: "She deserves to rule."
  ww1_serbia.127.b: "Its a woman."
 
- ww1_serbia.139.t: "Unification with [CRO.GetNameDef]"
- ww1_serbia.139.d: "Freed from Austrian rule, our compatriots are finally ready to unite in the name of South Slavs brotherhood."
+ ww1_serbia.139.t: "Unification with [FROM.GetNameDef]?"
+ ww1_serbia.139.d: "Freed from Austrian rule, we are finally ready to unite with [FROM.GetNameDef] in the name of South Slavs brotherhood."
  ww1_serbia.139.a: "Hooray!"
+ ww1_serbia.139.b: "We are different!"
  ww1_serbia.140.t: "Unification with [FROM.GetNameDef]"
  ww1_serbia.140.d: "Now that our South Slav brothers have achieved victory in the Great War and the joy of independence, we shall pursue the path of unity, but it has come sooner than we expected. At the assembly in Podgorica, which has gathered for national unity, the parties supported by the [FROM.GetAdjective] government are demanding the abdication of our monarch and the immediate annexation."
  ww1_serbia.140.a: "Hooray!"
- ww1_serbia.140.b: "Hooray!"
+ ww1_serbia.140.b: "I have never given permission...!"
  surrender_against_austria: "Offer Surrender Terms to [AUH.getName]"
 
 
