--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8483,11 +8483,10 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
 
  RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council Decisions"
  RAJ_viceroy_executive_council_category_desc:0 "Established as an advisory council by the Regulating Act of 1773 and transformed into a functioning cabinet by the Indian Councils Act of 1861, the Viceroy's Executive Council is the effective government of the Raj, with each member having an assigned portfolio such as revenue, military, law, finance, home and public works. The Commander-in-Chief also sits on the Council as an extraordinary member.\n\nIf deemed necessary, the Viceroy is allowed to overrule the Council on affairs. The Indian Councils Act 1909, also known as the §YMorley-Minto Reforms§!, enabled the Viceroy to nominate one Indian member to the Executive Council, leading to the appointment of §YSatyendra Prasanna Sinha§! as the first Indian member.\n"
+
  RAJ_repel_factory_act:0 "Repeal the Indian Factories Act"
  RAJ_repel_factory_act_desc:0 "While the Indian Factories Act was needed to improve labour conditions and thus gain public support, it now stands against our production quotas."
  RAJ_you_can_repel.tt:0 "\nTaking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision\n"
- RAJ_expand_military_industry:0 "Expand Military Industry"
- RAJ_expand_military_industry_desc:0 "We must urge the Ordnance Factory Board to build new arsenals in preparation for the upcoming conflict."
  RAJ_reformation_through_work:0 "Reformation through Work"
  RAJ_reformation_through_work_desc:0 "The Criminal Tribes Act allows us to detain any individual who's affiliated with one of the many ''Criminal tribes'' and reform them through labour camps. While the reformation doesn't actually help the ''Criminals'' emancipate themselves from their caste, it does provide free labour."
  RAJ_organise_manoeuvres:0 "Organise Military Manoeuvres"
@@ -8500,17 +8499,36 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  decision_cost_CP_25_PP_15: "£command_power  §Y25§! £pol_power  §Y15§!"
  decision_cost_CP_25_PP_15_blocked: "£command_power  §R25§! £pol_power  §Y15§!"
  decision_cost_CP_25_PP_15_tooltip: "It costs £command_power  §Y25§! and £pol_power  §Y15§! to take the decision"
- RAJ_expand_civilian_industry:0 "Expand Civilian Industry"
- RAJ_expand_civilian_industry_desc:0 "Since the introduction of the British administration in the region, the subcontinent has lacked any form of domestic industry, apart from small arms arsenals. Our new programme against stagflation is designed to improve this situation and create new jobs along the way."
- RAJ_organise_public_works:0 "Organise Public Works"
+ RAJ_consolidate_indian_laws:0 "Consolidate Indian Laws"
  RAJ_promote_western_education:0 "Promote Western Education"
  RAJ_propaganda_campaign:0 "Propaganda Campaign"
  RAJ_supress_nationalist_newspaper:0 "Supress Nationalist Newspaper"
  RAJ_supress_socialists_groups:0 "Supress Socialists Groups"
  RAJ_appease_the_indian_national_congress:0 "Appease the Indian National Congress"
  RAJ_appease_the_all_india_muslim_league:0 "Appease the All-India Muslim League"
+ 
+ RAJ_montagu_chelmsford_reforms_category:0 "Montagu-Chelmsford Reforms"
+
+ RAJ_establish_committee_on_home_administration:0 "Establish the Committee on Home Administration"
+ RAJ_establish_committee_on_home_administration_reward:0 "The §YCommittee on Home Administration§! will now be established!"
+ committee_on_home_administration_established:0 "§YCommittee on Home Administration Established§!"
+
+ RAJ_establish_feetham_function_committee:0 "Establish the Feetham Function Committee"
+ RAJ_establish_feetham_function_committee_reward:0 "The §YFeetham Function Committee§! will now be established!"
+ feetham_function_committee_established:0 "§YFeetham Function Committee Established§!"
+
+ RAJ_establish_southborough_franchise_committee:0 "Establish Southborough Franchise Committee"
+ RAJ_establish_southborough_franchise_committee_reward:0 "The §YSouthborough Franchise Committee§! will now be established!"
+ southborough_franchise_committee_established:0 "§YSouthborough Franchise Committee Established§!"
 
 
+ RAJ_indian_economy_category:0 "Indian Economy"
+
+ RAJ_expand_civilian_industry:0 "Expand Civilian Industry"
+ RAJ_expand_civilian_industry_desc:0 "Since the introduction of the British administration in the region, the subcontinent has lacked any form of domestic industry, apart from small arms arsenals. Our new programme against stagflation is designed to improve this situation and create new jobs along the way."
+ RAJ_organise_public_works:0 "Organise Public Works"
+ RAJ_expand_military_industry:0 "Expand Military Industry"
+ RAJ_expand_military_industry_desc:0 "We must urge the Ordnance Factory Board to build new arsenals in preparation for the upcoming conflict."
 
  organized_pacifism_category:0 "Organised Pacifism"
  organise_a_peaceful_protest_in_delhi:0 "Organise a Peaceful Protest in Delhi"
