RAJ Small Decisions Fix UPDATE

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10525,7 +10525,7 @@ RAJ_placate_the_nationalists:0 "Placate the Nationalists"
 RAJ_placate_the_nationalists_desc:0 "Through his hard work and diplomatic skills, [RAJ.GetLeader] has paved the way for closer cooperation with the Indian National Congress. As a result, radicalism within the Congress has diminished and we can focus on more pressing matters."
 RAJ_august_declaration:0 "August Declaration"
 RAJ_august_declaration_desc:0 ""
-RAJ_montagu_chelmsford_reforms:0 "Montagu-Chelmsford Reforms"
+RAJ_montagu_chelmsford_reforms:0 "Announce Montagu-Chelmsford Reforms"
 RAJ_montagu_chelmsford_reforms_desc:0 ""
 RAJ_government_of_india_act_1912:0 "Reorganization of Bengal"
 RAJ_government_of_india_act_1912_desc:0 ""
