new states for turkey

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -823,7 +823,7 @@
  STATE_822:0 "Xaignabouli"
  STATE_823:0 "Zaqatala"
  STATE_824:0 "Aydın"
- STATE_825:0 "Karesi"
+ STATE_825:0 "Bandırma"
  STATE_826:0 "Olympe"
  STATE_827:0 "Darfur"
  STATE_828:0 "Hakkari"
@@ -1013,6 +1013,11 @@
  STATE_1012:0 "Cherepovets"
  STATE_1013:0 "Asterabad"
  STATE_1014:0 "Caribbean Netherlands"
+ STATE_1015:0 "Karesi"
+ STATE_1016:0 "Kütahya"
+ STATE_1017:0 "Yozgat"
+ STATE_1018:0 "Çatalca"
+ STATE_1019:0 "İzmit"
 
  Dyushambe:0 "Dyushambe"
  YODONG_STATE:0 "Yodong"
