--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1924,6 +1924,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_open_albanian_escape_ports_tt:0 "Any controlled state:\nIs in §YAlbania§!, §YMacedonia§!, §YSerbia§!, §YMontenegro§!, §YNorthern Greece§! or §YEastern Bulgaria§!\nHas 0 §YSupply Hubs§!"
  TUR_fill_the_balkan_railway_gaps:0 "Fill the Western Balkan Railway Gaps"
  TUR_fortification_of_konstantiniyye:0 "Fortification of [347.GetName]"
+ TUR_fortification_of_catalca:0 "Fortification of [1018.GetName]"
  TUR_fortification_of_gelibolu:0 "Fortification of [860.GetName]"
  TUR_fortification_of_canakkale:0 "Fortification of [861.GetName]"
  TUR_fortification_of_edirne:0 "Fortification of Edirne"
