fix conflicts and progerman outcome

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -576,3 +576,11 @@
  RUS_democratic_party_long: "Konstitutsionno-Demokraticheskaya Partiya"
  RUS_fascism_party: "SRN"
  RUS_fascism_party_long: "Soyuz Russkogo Naroda"
+ 
+ #armenian reforms
+
+ armenian_reforms_crisis_Russian_claim:0 "§Y[RUS.getFlag][RUS.getName]§!  wants to carry out reforms for Anatolian Armenians"
+armenian_reforms_crisis_German_claim:0 "§Y[GER.getFlag][GER.getName]§!  wants to abolish any reforms"
+armenian_reforms_crisis_name_wargoal:0 "Armenian reforms Crisis "
+armenian_reforms_alert:0 "Armenian reforms crisis alert"
+armenian_reforms_crisis_alert_tt:0 "§RThe Armenian reforms crisis§! begins, opposing §Y[RUS.getFlag][RUS.getAdjective]§! claims for reparations toward §Y[GER.getFlag][GER.getName]§!."
