RAJ Decisions UPDATE

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10531,6 +10531,7 @@ RAJ_government_of_india_act_1912:0 "Reorganization of Bengal"
 RAJ_government_of_india_act_1912_desc:0 ""
 RAJ_government_of_india_act_1915:0 "Consolidate Indian Laws"
 RAJ_government_of_india_act_1915_desc:0 ""
+RAJ_government_of_india_act_1915_reward:0 "Completing this focus will allow us to begin the process of §Yunbloating§! the §Ylegal apparatus§!."
 RAJ_government_of_india_act:0 "Government of India Act"
 RAJ_government_of_india_act_desc:0 ""
 RAJ_mobilize_the_raj:0 "Mobilize the Raj"
