--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -2548,7 +2548,7 @@
  GRE_liberate_balkans:0 "Liberate the Balkans"
  GRE_liberate_balkans_desc:0 "The Balkan nations are heavily oppressed by their capitalist overlords, we shall seek to liberate their workers by armed means!"
  GRE_form_balkan_federation2:0 "Form the Balkan Federation"
- GRE_form_balkan_federation2_desc:0 "The Balkan countries are under our fold -- We can finally form a Balkan Federation of equals that ensures full propserity of its citizens."
+ GRE_form_balkan_federation2_desc:0 "The Balkan countries are under our fold -- We can finally form a Balkan Federation of equals that ensures full prosperity of its citizens."
  GRE_balkan_alliance:0 "Create a Balkan Alliance"
  GRE_balkan_alliance_desc:0 "A Balkan Federation is simply too ideal to be able to be formed, instead, we shall form a Balkan military and economic alliance in order to bring the Balkan nations closer."
  GRE_strike_deal_with_bulgaria:0 "Strike a Deal with Bulgaria"
@@ -2556,7 +2556,7 @@
  GRE_negotiate_entente_territory:0 "Purchase Entente Territory"
  GRE_negotiate_entente_territory_desc:0 "Our strict neutrality in the war has enabled us to gain a large economic surplus, thus, since our diplomatic relations with the Entente have largely improved with the Macedonia lease, we can purchase some of their territories that we claim."
  GRE_help_the_reds:0 "Help the Reds"
- GRE_help_the_reds_desc:0 "The Reds in russia are in a tricky situation, their victory is not guaranteed. We shall give some of our arms from the stockpile for their revolutionary cause!"
+ GRE_help_the_reds_desc:0 "The Reds in Russia are in a tricky situation, their victory is not guaranteed. We shall give some of our arms from the stockpile for their revolutionary cause!"
  GRE_fate_of_king:0 "Fate of the King"
  GRE_fate_of_king_desc:0 "The King is an ambiguous personality that often meddles in Greek politics, we need to decide if he shall remain as a popular figurehead or if he shall be banished from our country."
  GRE_towards_balkan_federation:0 "Towards a Balkan Federation"
@@ -2813,13 +2813,13 @@
  BUL_claim_dobruja:0 "Claim Dobruja"
  BUL_claim_dobruja_desc:0 "Its vital we retake Dobruja. Not only does it have a large Bulgarian population, the mouth of the Danube flows through it."
  BUL_claim_vardar_macedonia:0 "Claim Macedonia"
- BUL_claim_vardar_macedonia_desc:0 "An integral part of our nation, Macedonia is the crown jewel of Bulgarian irredentism."
+ BUL_claim_vardar_macedonia_desc:0 "An integral part of our nation, Macedonia is the crown jewel of Bulgarian irredentism. It must become part of the fatherland no matter the cost."
  BUL_join_central_powers:0 "Join Central Powers"
- BUL_join_central_powers_desc:0 "After Russia started favouring Belgrade over us and the Greco-Serb theft of Macedonia, it is only natural we join the Central Powers"
+ BUL_join_central_powers_desc:0 "After Russia started favouring Belgrade over us and the Greco-Serb theft of Macedonia, it is only natural we join the Central Powers."
  BUL_join_entente:0 "Join Entente"
- BUL_join_entente_desc:0 "With Russian support, we can potentially convince Serbia and Greece to cede "
+ BUL_join_entente_desc:0 "With Russian support, we can potentially convince Serbia and Greece to make territorial concessions in Thrace and Macedonia in exchange for an alliance, along with recognition of claims over Adrianople. "
  BUL_join_soviet_russia:0 "Join Soviet Russia"
- BUL_join_soviet_russia_desc:0 ""
+ BUL_join_soviet_russia_desc:0 "With the new socialist government, its only natural we join our Russian brothers in arms."
  BUL_continue_militarisation:0 "Continue Militarisation"
  BUL_continue_militarisation_desc:0 "To secure our position as a power in the Balkans, we must continue militarising our country. More men will be brought to the army to prepare for anything that will come to us."
  BUL_military_stuff_reorganisation:0 "Military Staff Reorganisation"
@@ -2867,7 +2867,7 @@
  BUL_start_industrialization:0 "Start Industrialisation"
  BUL_start_industrialization_desc:0 "To not fall behind the rest of the world, we must begin industrialising our nation now! It will be very expensive, however we will reap the benefits in the future."
  BUL_expand_civilian_industry:0 "Expand Civilian Industry"
- BUL_expand_civilian_industry_desc:0 "We should make small investmenets into civilian industries to go along with our agrarian expansion to produce more goods and expand our economy."
+ BUL_expand_civilian_industry_desc:0 "We should make small investments into civilian industries to go along with our agrarian expansion to produce more goods and expand our economy."
  BUL_expand_arms_industry:0 "Expand Arms Industry"
  BUL_expand_arms_industry_desc:0 "With our increasing army size, we must expand our arms industry to equip it. We will make investments into arms manufacturing across our nation, to make sure we are fully equipped and prepared."
  BUL_extensive_urbanisation:0 "Extensive Urbanisation"
@@ -2904,8 +2904,8 @@
  BUL_black_sea_university_desc:0 ""
  BUL_cruiser_research:0 "Cruiser Research"
  BUL_cruiser_research_desc:0 ""
- BUL_kuznetsov_naval_academy:0 "Nikola Vaptsarov Naval Academy"
- BUL_kuznetsov_naval_academy_desc:0 ""
+ BUL_kuznetsov_naval_academy:0 "Maritime School Naval Academy"
+ BUL_kuznetsov_naval_academy_desc:0 "Founded in 1881, the Maritime School is the oldest technical institution in Bulgaria. Expanding its facilities would enable us to create a much larger officer corps for the Navy."
  BUL_destroyer_research:0 "Destroyer Research"
  BUL_destroyer_research_desc:0 ""
  BUL_new_balkan_power:0 "New Balkan Power"
@@ -2953,9 +2953,9 @@
  BUL_increase_tsars_influence_in_army:0 "Increase Tsar's Army Influence"
  BUL_increase_tsars_influence_in_army_desc:0 "It goes without saying that only the Tsar is worthy to lead his armies to victory."
  BUL_bulgarian_russian_trade_deal:0 "Bulgarian-Russian Trade Deal"
- BUL_bulgarian_russian_trade_deal_desc:0 "It's not too late to recover our relationship with Russia. Ensuring stable trade between our nations is the first step."
+ BUL_bulgarian_russian_trade_deal_desc:0 "It's not too late to recover our relationship with Russia.Ensuring stable trade between our nations is the first step."
  BUL_claim_tsargrad:0 "Claim Tsargrad"
- BUL_claim_tsargrad_desc:0 ""
+ BUL_claim_tsargrad_desc:0 "Constantinople, or as we call it, Tsargrad, was capital of the Byzantine Empire until it was stolen by the Ottomans. It must be reunited with the Orthodox world."
  BUL_suppress_opposition:0 "Suppress Opposition"
  BUL_suppress_opposition_desc:0 "Various political groups such as BZNS and Radical Democratic Party do not support our government, we need to put them down."
  BUL_secure_a_french_loan:0 "Secure a French Loan"
