--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -700,7 +700,7 @@
  TUR_azerbaijani_minority_desc:0 "Among all the minorities, this state is populated mostly by Azerbaijanis. This results in an overall increased opinion of us by the locals and gives us an easier time with ruling these lands."
  TUR_minority_revolt_tt:0 "If §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n"
  TUR_autonomous_vilayet:0 "Autonomous Vilayet"
- TUR_autonomous_vilayet_desc:0 "Autonomous vilayets restrict our access to the states factories and resources yet provides us with increased local compliance and stability.
+ TUR_autonomous_vilayet_desc:0 "Autonomous vilayets restrict our access to the states factories and resources yet provides us with increased local compliance and stability."
  TUR_semi_autonomous_vilayet:0 "Semi-Autonomous Vilayet"
  TUR_semi_autonomous_vilayet_desc:0 "Semi-autonomous vilayets partly restrict our access to the states factories and resources yet provides us with slightly increased local compliance and stability."
  TUR_martial_law:0 "Martial Law"
