--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -604,6 +604,7 @@
  VICTORY_POINTS_2064:0 "İzmit"
  VICTORY_POINTS_3951:0 "Eskişehir"
  VICTORY_POINTS_11826:0 "Yozgat"
+ VICTORY_POINTS_1056:0 "Homs"
 
  PETROGRAD_PROV:0 "Petrograd"
  LENINGRAD_PROV:0 "Leningrad"
