--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -939,9 +939,9 @@ gridlock_effect:0 "National Focus will become §RUnavailable§!: '§YFoundations
 huge_midterm_loss:0 "This event grants:\nAdd §YDomestic Gridlock§! which grants (Political Power Gain: §R-50%§!)\nGain Base Stability: §R-20.00%§!\nPolitical Power: §R-200§!\nNational Focus will become §RUnavailable§!: '§YFoundations for Fiscal Sustainability§!'\nNational Focus will become §RUnavailable§!: '§YGuide The Private Banking Sector§!'\nNational Focus will become §RUnavailable§!: '§YTrue Central Bank§!'\nNational Focus will become §RUnavailable§!: '§YAn Economy Safe for the Little Man§!\nNational Focus will become §RUnavailable§!: '§YEnforce a Safe Working Enviornment'§!\nNational Focus will become §RUnavailable§!: '§YFair Hours for Fair Labor§!'\nNational Focus will become §RUnavailable§!: '§YReclamation and Irrigation Act§!'"
 midterm_losss:0 "This event grants:\nAdd §YMinority Government§! which grants (Political Power Gain: §R-25%§!)\nGain Base Stability: §R-10.00%§!\nPolitical Power: §R-100§!\nNational Focus will become §RUnavailable§!: '§YFoundations for Fiscal Sustainability§!'\nNational Focus will become §RUnavailable§!: '§YGuide The Private Banking Sector§!'\nNational Focus will become §RUnavailable§!: '§YTrue Central Bank§!'\nNational Focus will become §RUnavailable§!: '§YAn Economy Safe for the Little Man§!\nNational Focus will become §RUnavailable§!: '§YEnforce a Safe Working Enviornment'§!\nNational Focus will become §RUnavailable§!: '§YFair Hours for Fair Labor§!'\nNational Focus will become §RUnavailable§!: '§YReclamation and Irrigation Act§!'"
 
-midterm_win:0 "This event grants:\nModify level of §YProgressivism§! by: §G+1§!\nGain Base Stability: §G+5.00%§!\nPolitical Power: §G+50§!"
+midterm_win:0 "This event grants:\nModify level of §nCongressional Tolerance§! by: §G+1§!\nGain Base Stability: §G+5.00%§!\nPolitical Power: §G+50§!"
 
-midterm_hugewin:0 "This event grants:\nModify level of §YProgressivism§! by: §G+2§!\nGain Base Stability: §G+10.00%§!\nPolitical Power: §G+100§!"
+midterm_hugewin:0 "This event grants:\nModify level of §nCongressional Tolerance§! by: §G+2§!\nGain Base Stability: §G+10.00%§!\nPolitical Power: §G+100§!"
 USA_mend_wounds_in_the_party:0 "Mend Rifts in the Party"
 USA_mend_wounds_in_the_party_desc:0 "A lot of infighting and tension exists in the Republican party of today. We need to make a clear effort to help mend the growing rift, and make sure all Republicans are united."
 USA_expand_insurance:0 "Expand Insurance"
@@ -1368,7 +1368,7 @@ USA_mineral_leasing_act_desc:0 "wilson was a racist"
 USA_direct_the_marine_corps:0 "Direct the Marine Corps"
 USA_direct_the_marine_corps_desc:0 "why would you ever do this"
 USA_commercial_radio_broadcasts:0 "Commercial Radio Broadcasts"
-USA_prohibation:0 "Prohibation"
+USA_prohibation:0 "Outlaw the Devils Drink"
 USA_expand_oil_drilling:0 "Expand Oil Drilling"
 USA_re_privatize_rail:0 "Re Privatize the Railways"
 USA_plumb_plan:0 "The Plumb Plan"
@@ -10343,11 +10343,14 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  AUH_divert_truck_production_for_army:0 "Divert Truck Production for Army"
  AUH_redirect_arms_export:0 "Redirect Arms Export"
  AUH_fruits_of_open_door_desc:0 "The Emperor's connections allow us to establish contracts with large companies at a greatly reduced price. This opportunity could allow us to catch up with the industrial level of the other great powers. However, we must be careful not to become too dependent on lobbies...\n§RThere actualy are §Y[?AUH_corruption_var_plain]§! Corruption points.§!"
-
+USA_council_of_national_defense:0 "Assemble the Council"
  AUH_handle_partnership:0 "Handle Partnership"
  AUH_handle_partnership_desc:0 ""
  AUH_intensive_lobbying:0 "Intense Lobbying"
  AUH_intensive_lobbying_desc:0 ""
+USA_palmer_raids:0 "Finish the Socialists off"
+USA_deportation_act:0 "Expel Radical Anarchists"
+ USA_womens_right_to_vote:0 "Expand Voting Rights to Women"
  AUH_carte_blanche_to_lobbies:0 "Carte Blanche to Lobbies"
  AUH_carte_blanche_to_lobbies_desc:0 ""
 
