--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2171,6 +2171,7 @@ socialism_banned:0 "Socialism Banned"
  luoyang_military_academy:0 "Luoyang Military Academy" #洛陽軍官學校
  CHI_may_fourth_movement:0 "May Fourth Movement"
  CHI_banditry:0 "Local Banditry"
+pacifist2:0 "Peace Maker"
  CHI_banditry_desc:0 "Its land and mountains are vast and its population enormous. Neither central nor local government is able or willing to effectively control all of its territory. In the midst of this, armed bandit groups thrive."
  CHI_idea_republic_army:0 "Republic Army"
  CHI_idea_merchant_army:0 "Merchant Militia" #商團
